--- a/schedule/yast/ext4/ext4@yast-s390x-disk-activation.yaml
+++ b/schedule/yast/ext4/ext4@yast-s390x-disk-activation.yaml
@@ -29,3 +29,7 @@ schedule:
   - installation/reboot_after_installation
   - boot/reconnect_mgmt_console
   - installation/first_boot
+  - console/validate_ext4_fs
+test_data:
+  device: /dev/dasda
+  !include: test_data/yast/ext4/ext4.yaml
