--- a/schedule/yast/ext4/ext4@yast-s390x.yaml
+++ b/schedule/yast/ext4/ext4@yast-s390x.yaml
@@ -30,4 +30,5 @@ schedule:
   - installation/first_boot
   - console/validate_ext4_fs
 test_data:
+  device: /dev/vda
   !include: test_data/yast/ext4/ext4.yaml
