--- a/schedule/qam/12-SP5/mau-extratests.yaml
+++ b/schedule/qam/12-SP5/mau-extratests.yaml
@@ -12,9 +12,7 @@ schedule:
 - console/update_alternatives
 - console/rpm
 - console/slp
-- console/aplay
-- console/soundtouch
-- console/wavpack
+- {{x86_64_tests}}
 - console/libvorbis
 - console/command_not_found
 - console/openssl_alpn
@@ -22,14 +20,12 @@ schedule:
 - console/cron
 - console/syslog
 - console/mta
-- console/yast2_lan_device_settings
 - console/check_default_network_manager
 - console/git
 - console/cups
 - console/java
 - console/sqlite3
 - console/ant
-- console/gdb
 - console/perf
 - console/sysctl
 - console/sysstat
@@ -67,4 +63,12 @@ conditional_schedule:
     ARCH:
       s390x:
         - installation/bootloader_zkvm
+  x86_64_tests:
+    ARCH:
+      x86_64:
+        - console/aplay
+        - console/soundtouch
+        - console/wavpack
+        - console/yast2_lan_device_settings
+        - console/gdb
 ...
