Add tests for bond, bridge and vlan restart
The commit adds the three separate test modules that are using OOP
framework.

Related ticket: [poo#59315](https://progress.opensuse.org/issues/59315)

--- a/schedule/yast/yast2_gui.yaml
+++ b/schedule/yast/yast2_gui.yaml
@@ -25,3 +25,6 @@ schedule:
     - yast2_gui/yast2_software_management
     - yast2_gui/yast2_users
     - yast2_gui/yast2_security
+    - yast2_gui/yast2_lan_restart_bridge
+    - yast2_gui/yast2_lan_restart_vlan
+    - yast2_gui/yast2_lan_restart_bond
