--- a/schedule/vagrant.yaml
+++ b/schedule/vagrant.yaml
@@ -5,6 +5,11 @@ vars:
     QEMUCPU: host
 schedule:
   - boot/boot_to_desktop
-  - virtualization/vagrant/add_box_virtualbox
+  - {{add_box_virtualbox}}
   - virtualization/vagrant/add_box_libvirt
   - virtualization/vagrant/boxes/tumbleweed
+conditional_schedule:
+  add_box_virtualbox:
+    ARCH:
+      x86_64:
+        - virtualization/vagrant/add_box_virtualbox
