--- a/schedule/qam/12-SP1/mau-extratests.yaml
+++ b/schedule/qam/12-SP1/mau-extratests.yaml
@@ -40,6 +40,7 @@ schedule:
 - console/supportutils
 - console/mdadm
 - console/journalctl
+- console/journalctlLevels
 - console/quota
 - console/vhostmd
 - console/rpcbind
