--- a/schedule/qam/15/mau-extratests.yaml
+++ b/schedule/qam/15/mau-extratests.yaml
@@ -46,6 +46,7 @@ schedule:
 - console/supportutils
 - console/mdadm
 - console/journalctl
+- console/journalctlLevels
 - console/quota
 - console/vhostmd
 - console/rpcbind
