--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ cache:
 before_install:
   - eval $(curl https://travis-perl.github.io/init) --perl --always-upgrade-modules
   - echo "requires 'Code::DRY';" >> cpanfile
+  - echo "requires 'Regexp::Common';" >> cpanfile
   - echo "requires 'Perl::Tidy', '== 20191203';" >> cpanfile
 install:
   - make prepare
