Add yast2_clone_system to validate generated profile on stagingY
I updated the yaml scheduler.
I havent done any other change in test_suite.
factory repo is used in case of staging.
After installation of jing the repo is removed.
Also I removed the xmllint.

--- a/schedule/staging/autoyast_mini@64bit-staging.yaml
+++ b/schedule/staging/autoyast_mini@64bit-staging.yaml
@@ -8,6 +8,7 @@ schedule:
     - autoyast/installation
     - autoyast/console
     - autoyast/login
+    - console/yast2_clone_system
     - autoyast/wicked
     - autoyast/repos
     - autoyast/clone
