--- a/schedule/rt/sle12/rt.yaml
+++ b/schedule/rt/sle12/rt.yaml
@@ -2,27 +2,7 @@
 description: "Maintainer: thehejik;  SLERT installation from scratch\n\nBUILD_SLE=GM"
 name: 'rt@64bit ( qemu )'
 schedule:
-  - installation/isosize
-  - installation/bootloader
-  - installation/welcome
-  - installation/accept_license
-  - installation/scc_registration
-  - installation/addon_products_sle
-  - installation/system_role
-  - installation/partitioning
-  - installation/partitioning_finish
-  - installation/installer_timezone
-  - installation/user_settings
-  - installation/user_settings_root
-  - installation/resolve_dependency_issues
-  - installation/installation_overview
-  - installation/disable_grub_timeout
-  - installation/start_install
-  - installation/await_install
-  - installation/logs_from_installation_system
-  - installation/reboot_after_installation
-  - installation/grub_test
-  - installation/first_boot
+  - boot/boot_to_desktop
   - rt/kmp_modules
   - rt/rt_is_realtime
   - rt/rt_peak_pci
