Refactor zypper orphan test case

--- a/schedule/jeos/sle/kvm/jeos-main.yaml
+++ b/schedule/jeos/sle/kvm/jeos-main.yaml
@@ -46,6 +46,7 @@ schedule:
   - console/mysql_srv
   - console/rsync
   - console/zypper_lifecycle
+  - console/repo_orphaned_packages_check
   - console/orphaned_packages_check
   - console/consoletest_finish
   
