--- a/schedule/jeos/sle/hyperv/jeos-base+sdk+desktop.yaml
+++ b/schedule/jeos/sle/hyperv/jeos-base+sdk+desktop.yaml
@@ -24,3 +24,5 @@ schedule:
   - toolchain/install
   - toolchain/gcc_compilation
   - toolchain/gcc_fortran_compilation
+  - console/orphaned_packages_check
+  - console/consoletest_finish
