--- a/schedule/jeos/sle/xen/pv/jeos-main.yaml
+++ b/schedule/jeos/sle/xen/pv/jeos-main.yaml
@@ -46,5 +46,5 @@ schedule:
   - console/rsync
   - console/zypper_lifecycle
   - console/orphaned_packages_check
+  - console/repo_orphaned_packages_check
   - console/consoletest_finish
-  
