Use installation/first_boot to assert system boot
Originally we used generic needles to assert boot of the system, but
practice proved that better use methods we use everywhere else, as we
got gnome bug that user is not preselected. We have implemented
workaround, but branched check didn't have it, so re-using same module
here as well.

--- a/schedule/yast/autoyast_y2_firstboot.yaml
+++ b/schedule/yast/autoyast_y2_firstboot.yaml
@@ -9,4 +9,5 @@ schedule:
     - installation/bootloader_start
     - autoyast/installation
     - installation/yast2_firstboot
+    - installation/first_boot
     - console/validate_yast2_firstboot_configuration
