--- a/schedule/yast/boot_linuxrc.yaml
+++ b/schedule/yast/boot_linuxrc.yaml
@@ -1,5 +1,8 @@
 name:           boot_linuxrc
 description:    >
     Test booting from cd to existing linux with linuxrc.
+vars:
+    DESKTOP: gnome
 schedule:
      - boot/boot_linuxrc
+     - installation/first_boot
