Add validation function for partition table

--- a/schedule/yast/btrfs/btrfs_opensuse.yaml
+++ b/schedule/yast/btrfs/btrfs_opensuse.yaml
@@ -28,6 +28,8 @@ schedule:
   - console/validate_no_cow_attribute
   - console/verify_no_separate_home
 test_data:
+  device: /dev/vda
+  table_type: gpt
   subvolume:
     cow:
       - /
