--- a/schedule/yast/ext4/ext4@yast-s390x-disk-activation.yaml
+++ b/schedule/yast/ext4/ext4@yast-s390x-disk-activation.yaml
@@ -32,4 +32,5 @@ schedule:
   - console/validate_ext4_fs
 test_data:
   device: /dev/dasda
+  table_type: dasd
   !include: test_data/yast/ext4/ext4_no_separate_home.yaml
