--- a/schedule/yast/ext4/ext4@yast-xen-pv.yaml
+++ b/schedule/yast/ext4/ext4@yast-xen-pv.yaml
@@ -30,4 +30,5 @@ schedule:
   - console/validate_ext4_fs
 test_data:
   device: /dev/xvdb
+  table_type: gpt
   !include: test_data/yast/ext4/ext4.yaml
