--- a/schedule/yast/ext4/ext4@yast_spvm.yaml
+++ b/schedule/yast/ext4/ext4@yast_spvm.yaml
@@ -34,4 +34,5 @@ schedule:
   - console/validate_ext4_fs
 test_data:
   device: /dev/sda
+  table_type: gpt
   !include: test_data/yast/ext4/ext4.yaml
