--- a/schedule/yast/btrfs/btrfs_sle_libstorage-ng.yaml
+++ b/schedule/yast/btrfs/btrfs_sle_libstorage-ng.yaml
@@ -19,7 +19,7 @@ schedule:
   - installation/partitioning_filesystem
   - installation/partitioning_finish
   - installation/installer_timezone
-  # Called on all, except BACKEND: s390x, ipmi
+  # Called on all, except BACKEND: s390x
   - {{hostname_inst}}
   - installation/user_settings
   - installation/user_settings_root
@@ -30,7 +30,7 @@ schedule:
   - installation/await_install
   - installation/logs_from_installation_system
   - installation/reboot_after_installation
-  # Called on BACKEND: s390x, svirt, ipmi
+  # Called on BACKEND: s390x, svirt
   - {{reconnect_mgmt_console}}
   # Called on BACKEND: qemu
   - {{grub_test}}
@@ -54,8 +54,6 @@ conditional_schedule:
         - boot/reconnect_mgmt_console
       svirt:
         - boot/reconnect_mgmt_console
-      ipmi:
-        - boot/reconnect_mgmt_console
   check_resume:
     ARCH:
       s390x:
@@ -78,12 +76,11 @@ conditional_schedule:
       svirt:
         - console/verify_separate_home
         - console/validate_file_system
-      ipmi:
-        - console/verify_separate_home
-        - console/validate_file_system
       s390x:
         - console/verify_no_separate_home
 test_data:
+  device: /dev/vda
+  table_type: gpt
   subvolume:
     cow:
       - /root
