--- a/schedule/yast/btrfs/btrfs_sle_libstorage-ng@hmc+ipmi.yaml
+++ b/schedule/yast/btrfs/btrfs_sle_libstorage-ng@hmc+ipmi.yaml
@@ -1,16 +1,13 @@
----
-name:           ext4@yast-s390x-disk-activation
+name:           btrfs_libstorage-ng@hmc+ipmi
 description:    >
-  Test for ext4 filesystem.
-  Requires disk activation and grub is not displayed due to console reconnection.
+  Validate default installation with btrfs and Libstorage NG.
 vars:
-  FILESYSTEM: ext4
-  FORMAT_DASD: install
+  DESKTOP: gnome
+  FILESYSTEM: btrfs
 schedule:
   - installation/bootloader_start
   - installation/welcome
   - installation/accept_license
-  - installation/disk_activation
   - installation/scc_registration
   - installation/addon_products_sle
   - installation/system_role
@@ -18,6 +15,7 @@ schedule:
   - installation/partitioning_filesystem
   - installation/partitioning_finish
   - installation/installer_timezone
+  - installation/hostname_inst
   - installation/user_settings
   - installation/user_settings_root
   - installation/resolve_dependency_issues
@@ -27,10 +25,30 @@ schedule:
   - installation/await_install
   - installation/logs_from_installation_system
   - installation/reboot_after_installation
-  - boot/reconnect_mgmt_console
+  # Called on BACKEND: ipmi
+  - {{reconnect_mgmt_console}}
   - installation/first_boot
-  - console/validate_ext4_fs
+  - console/validate_no_cow_attribute
+  - console/verify_separate_home
+  - console/validate_file_system
+conditional_schedule:
+  reconnect_mgmt_console:
+    BACKEND:
+      ipmi:
+        - boot/reconnect_mgmt_console
 test_data:
-  device: /dev/dasda
-  table_type: dasd
-  !include: test_data/yast/ext4/ext4_no_separate_home.yaml
+  device: /dev/sda
+  table_type: gpt
+  subvolume:
+    cow:
+      - /root
+      - /tmp
+      - /usr/local
+      - /.snapshots
+      - /srv
+      - /opt
+    no_cow:
+      - /var
+  file_system:
+    /home: xfs
+    /: btrfs
