--- a/schedule/yast/gpt.yaml
+++ b/schedule/yast/gpt.yaml
@@ -1,36 +1,34 @@
----
-name:           ext4@yast-s390x-disk-activation
-description:    >
-  Test for ext4 filesystem.
-  Requires disk activation and grub is not displayed due to console reconnection.
-vars:
-  FILESYSTEM: ext4
-  FORMAT_DASD: install
+name: gpt
+description:    > 
+  Test installation on a very large hard disk which needs GPT partition format.
 schedule:
+  - installation/isosize
   - installation/bootloader_start
   - installation/welcome
   - installation/accept_license
-  - installation/disk_activation
   - installation/scc_registration
   - installation/addon_products_sle
   - installation/system_role
   - installation/partitioning
-  - installation/partitioning_filesystem
   - installation/partitioning_finish
   - installation/installer_timezone
+  - installation/hostname_inst
   - installation/user_settings
   - installation/user_settings_root
   - installation/resolve_dependency_issues
+  - installation/change_desktop
   - installation/installation_overview
   - installation/disable_grub_timeout
   - installation/start_install
   - installation/await_install
   - installation/logs_from_installation_system
   - installation/reboot_after_installation
-  - boot/reconnect_mgmt_console
+  - installation/grub_test
   - installation/first_boot
-  - console/validate_ext4_fs
+  - console/validate_file_system
 test_data:
-  device: /dev/dasda
-  table_type: dasd
-  !include: test_data/yast/ext4/ext4_no_separate_home.yaml
+  device: /dev/vda
+  table_type: gpt
+  file_system:
+    /home: xfs
+    /: btrfs
