Fix socket usage in ctdb test

--- a/data/ha/smb.conf
+++ b/data/ha/smb.conf
@@ -3,7 +3,7 @@
     clustering = yes
     idmap config * : backend = tdb2
     passdb backend = tdbsam
-    ctdbd socket = /var/lib/ctdb/ctdb.socket
+    ctdbd socket = %CTDB_SOCKET%
     # settings necessary for CTDB on OCFS2
     fileid:algorithm = fsid
     vfs objects = fileid
@@ -36,3 +36,4 @@
     valid users = root, administrator
     read only = No
     inherit acls = Yes
+
