--- a/data/ha/sbd.template
+++ b/data/ha/sbd.template
@@ -1,5 +1,5 @@
 SBD_DEVICE=%SBD_DEVICE%
 SBD_PACEMAKER=yes
 SBD_STARTMODE=always
-SBD_DELAY_START=no
+SBD_DELAY_START=yes
 SBD_WATCHDOG_DEV=/dev/watchdog
