--- a/schedule/yast/btrfs/btrfs_sle_libstorage-ng.yaml
+++ b/schedule/yast/btrfs/btrfs_sle_libstorage-ng.yaml
@@ -79,7 +79,7 @@ conditional_schedule:
       s390x:
         - console/verify_no_separate_home
 test_data:
-  device: /dev/vda
+  device: vda
   table_type: gpt
   subvolume:
     cow:
