Remove /dev in test_data in filesystem validation

--- a/schedule/yast/btrfs/btrfs_opensuse.yaml
+++ b/schedule/yast/btrfs/btrfs_opensuse.yaml
@@ -28,7 +28,7 @@ schedule:
   - console/validate_no_cow_attribute
   - console/verify_no_separate_home
 test_data:
-  device: /dev/vda
+  device: vda
   table_type: gpt
   subvolume:
     cow:
